--- a/src/containers/possibility/possibility.css
+++ b/src/containers/possibility/possibility.css
@@ -12,6 +12,7 @@
 .gpt3__possibility-image img {
   width: 100%;
   height: 100%;
+  filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
 }
 .gpt3__possibility-content {
   flex: 1;
